fix(header): by removing header and banner styling #274418
They were meant as layout shifting fixes which should be added in our theme package and not as part of the volto-block-toc package

--- a/src/hocs/less/side-nav.less
+++ b/src/hocs/less/side-nav.less
@@ -1,28 +1,7 @@
 @media screen and (min-width: 992px) {
-  #main > #page-header:empty + .breadcrumbs {
-    display: none;
-  }
-
-  #page-header:empty + .breadcrumbs + .content-area {
-    padding-top: 0 !important;
-    margin-top: 0 !important;
-  }
 
   #page-document .eea-side-menu {
     display: none;
-  }
-
-  #page-document:has(.banner > .image) .eea-side-menu + * {
-    margin-top: 300px;
-  }
-
-  #page-document .eea.banner {
-    position: absolute;
-    left: 0;
-  }
-
-  #page-document .eea.banner + .documentDescription {
-    margin-top: 200px;
   }
 
   .has-side-nav {
